--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="..\website\style\style.css">
+    <link rel="stylesheet" href="C:\Users\bhura\OneDrive\Desktop\website\style\style.css">
 
     <title>my website</title>
     
