--- a/website/WEBSITECQ.html
+++ b/website/WEBSITECQ.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="\website\style\style.css">
+    <link rel="stylesheet" href="..\website\style\style.css">
 
     <title>my website</title>
   
