--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque rerum cupiditate sint voluptatum similique minus a laborum fuga earum delectus sed assumenda, consequatur, commodi provident, soluta inventore dicta quo veritatis?</p>
     </div>
     <div class="block">
-        <a href="../images/webdev.png">
-            <img src="../images/webdev.png" alt="my sample image" height="150" width="400">
+        <a href="images/webdev.png">
+            <img src="images/webdev.png" alt="my sample image" height="150" width="400">
           </a>
         <h3>Web Development</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, eos eius! Voluptatum vero dolorum quae mollitia sequi rem, laborum corporis quisquam iusto atque officiis, accusamus beatae facilis architecto maxime voluptatem.</p>
      </div>
      <div class="block"> 
-        <a href="../images/mob.jfif">
-            <img src="../images/mob.jfif" alt="my sample image"height="150" width="400">
+        <a href="images/mob.jfif">
+            <img src="images/mob.jfif" alt="my sample image"height="150" width="400">
           </a>               
       <h3>Mobile Application</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, tempora blanditiis! Officiis ab dicta rerum nobis ipsam, modi veritatis molestias perferendis eius quasi odit placeat corrupti earum, ipsum quos quo si francis di pope!</p>
    </div> 
    <div class="block">
-    <a href="../images/techmark.jpg">
-        <img src="../images/techmark.jpg" alt="my sample image" height="150" width="400">
+    <a href="images/techmark.jpg">
+        <img src="images/techmark.jpg" alt="my sample image" height="150" width="400">
       </a>
     <h3>Tech Marketing</h3>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate maxime itaque voluptatibus nobis delectus placeat obcaecati, consequuntur eum voluptas? Optio inventore nulla recusandae a fuga beatae iure quos adipisci facere!</p>
