--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head> 
 <body>
     <div class="container">
-        <div style="background-image: url('images/img1.jpg');">
+        <div style="background-image: url('images/img1.jpg');"></div>
     <h1>Welcome to Sudeep Bhurat Web Solutions</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat numquam blanditiis ipsum, ab nisi aspernatur placeat cumque dolore vero error tempore iure illo at quo sunt perferendis. Blanditiis, aliquid odio.</p>
     <a  class="button" href="#">Read More</a>
