--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="opinion">
         <h2>Web & Application Development</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque rerum cupiditate sint voluptatum similique minus a laborum fuga earum delectus sed assumenda, consequatur, commodi provident, soluta inventore dicta quo veritatis?</p>
+        <p>Lorem ipsum dolor sit, amt consectetur adipisicing elit. Itaque rerum cupiditate sint voluptatum similique minus a laborum fuga earum delectus sed assumenda, consequatur, commodi provident, soluta inventore dicta quo veritatis?</p>
     </div>
     <div class="block">
         <a href="images/webdev.png">
